--- a/app/globals.css
+++ b/app/globals.css
@@ -351,6 +351,14 @@ a{color:inherit}
   border-color: rgba(69,255,178,.35);
 }
 
+.tradeHistoryItem.canceled{
+  border-color: rgba(255,204,102,.4);
+}
+
+.tradeHistoryItem.skipped{
+  border-color: rgba(255,204,102,.4);
+}
+
 .tradeHistoryItem.error{
   border-color: rgba(255,92,122,.4);
 }
